# facebook-scraper

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements-frozen.txt  requirements.txt  selenium_photos_scraper.py
facebook_scraper/: __init__.py  __main__.py
