[tool.poetry]
name = "facebook-scraper"
version = "0.2.59"
description = "Scrape Facebook public pages without an API key"
authors = ["Kevin Zúñiga <kevin.zun@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kevinzg/facebook-scraper"

[tool.poetry.dependencies]
python = "^3.9"
requests-html = "^0.10.0"
dateparser = "^1.2.0"
demjson3 = "^3.0.6"
requests = "^2.32.5"
lxml = "^6.0.2"
youtube_dl = {version = "*", optional=true}
browser-cookie3 = {version = "*", optional=true}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.13"
ipython = "^8.18.1"
pytest = "^7.4.3"
pytest-vcr = "^1.0.2"
black = "^23.11.0"

[tool.poetry.extras]
youtube-dl = ["youtube_dl"]
browser-cookie3 = ["browser-cookie3"]

[tool.poetry.scripts]
facebook-scraper = 'facebook_scraper.__main__:run'

[tool.black]
line-length = 98
target-version = ["py39"]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
]